--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
                         <p>Prometei is a well-established international independent advisory firm that specializes in providing strategic and financial advice to a diverse range of clients.</p>
                         <p>We assist our clients in achieving their strategic objectives by offering comprehensive, globally integrated financial advisory services across various industries.</p>
                         <p>Our dynamic advisory practice supports clients throughout the business cycle, offering expert capabilities in M&A and Strategy, Capital Structure, Capital Markets and Private Funds.</p>
-                        <p>We assemble multi-functional teams that combine deep industry knowledge and broad corporate finance experience to leverage our global capabilities. Through this collaborative approach, we assist clients in navigating complex decisions and opportunities, offering a holistic perspective and creative solutions.</p>
+                        <p class="mobile_expanded_about_us_hide">We assemble multi-functional teams that combine deep industry knowledge and broad corporate finance experience to leverage our global capabilities. Through this collaborative approach, we assist clients in navigating complex decisions and opportunities, offering a holistic perspective and creative solutions.</p>
+                        <p class="mobile_only mobile_expand_about_us font_body_m font_bold">
+                            Read more
+                        </p>
                     </div>
                 </div>
             </div>
@@ -479,7 +482,8 @@
                 </a>
             </div>
             <div class="footer_map">
-                <div class="footer_map_city_wrapper" style="top: 16%; left: 10.7%">
+                <img class="footer_map_image" src="assets/images/map/map_bg.png" alt="">
+                <div class="footer_map_city_wrapper" style="top: 19.7%; left: 8.15%">
                     <div class="footer_map_city_name font_caption font_bold">
                         London
                     </div>
@@ -490,7 +494,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer_map_city_wrapper" style="top: 15%; left: 30.7%">
+                <div class="footer_map_city_wrapper" style="top: 19.7%; left: 29.4%">
                     <div class="footer_map_city_name font_caption font_bold">
                         Moscow
                     </div>
@@ -501,7 +505,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer_map_city_wrapper" style="top: 20.6%; left: 16.8%">
+                <div class="footer_map_city_wrapper" style="top: 25.3%; left: 14.3%">
                     <div class="footer_map_city_name font_caption font_bold">
                         Zug
                     </div>
@@ -512,7 +516,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer_map_city_wrapper" style="top: 24.5%; left: 47%">
+                <div class="footer_map_city_wrapper" style="top: 25.5%; left: 43%">
                     <div class="footer_map_city_name font_caption font_bold">
                        Bishkek
                     </div>
@@ -523,7 +527,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer_map_city_wrapper" style="top: 40%; left: 38.4%">
+                <div class="footer_map_city_wrapper" style="top: 44.5%; left: 36.4%">
                     <div class="footer_map_city_name font_caption font_bold">
                        Dubai
                     </div>
