--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
         </div>
     </section>
 
-    <div class="block">
+    <section class="block">
         <div class="prometheus_text">
             «...Prometheus is known for defying the Olympian gods by stealing fire from them and giving it to humanity in the form of technology, knowledge, and more generally, civilization...»
         </div>
-    </div>
+    </section>
 
     <section id="principles" class="block">
         <div class="white_block our_principles">
@@ -408,7 +408,7 @@
         </div>
     </section>
 
-    <div class="block">
+    <section class="block">
         <div class="white_block our_projects">
             <div class="our_projects_title">
                 Our Projects
@@ -440,7 +440,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <section id="connect" class="block">
         <div class="form_block">
@@ -541,6 +541,81 @@
             </div>
         </div>
     </footer>
+
+    <div class="modal_wrapper">
+        <div class="modal team_modal">
+            <div class="modal_close_wrapper">
+                <img class="modal_close_icon" src="assets/images/close.svg" alt="">
+            </div>
+            <div class="team_modal_content">
+                <div class="pc_only">
+                    <div class="team_modal_content_current ">
+                        <div class="team_modal_content_current_img_wrapper">
+                            <img src="/assets/images/team_avatar.png" alt="" class="team_modal_content_current_img">
+                            <div class="team_modal_content_current_img_border"></div>
+                        </div>
+                        <div class="team_modal_content_current_text_wrapper">
+                            <div class="team_modal_content_current_text_name font_bold font_body_xl">
+                                David Tabolov
+                            </div>
+                            <div class="team_modal_content_current_text_info font_body_xl">
+                                David has more than 8 years of Investment Banking and corporate finance experience. Focused on M&A, mezzanine financing, structured equity investments, special situations, LBO/MBO transactions.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team_modal_content_separator"></div>
+                    <div class="team_modal_content_other_list">
+                        <div class="team_list_item">
+                            <img src="assets/images/team_avatar.png" class="team_list_item_avatar">
+                            <div class="team_list_item_name">
+                                Alexei Tishakov
+                            </div>
+                            <img class="team_list_item_icon" src="assets/images/team/logo.svg" alt="">
+                        </div>
+                        <div class="team_list_item">
+                            <img src="assets/images/team_avatar.png" class="team_list_item_avatar">
+                            <div class="team_list_item_name">
+                                Ivan Mutovin
+                            </div>
+                            <img class="team_list_item_icon" src="assets/images/team/logo.svg" alt="">
+                        </div>
+                        <div class="team_list_item">
+                            <img src="assets/images/team_avatar.png" class="team_list_item_avatar">
+                            <div class="team_list_item_name">
+                                Artur Khalatov
+                            </div>
+                            <img class="team_list_item_icon" src="assets/images/team/logo.svg" alt="">
+                        </div>
+                        <div class="team_list_item">
+                            <img src="assets/images/team_avatar.png" class="team_list_item_avatar">
+                            <div class="team_list_item_name">
+                                Azamat Galazovbr
+                            </div>
+                            <img class="team_list_item_icon" src="assets/images/team/logo.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="team_modal_content_mobile mobile_only">
+                    <div class="team_modal_content_mobile_img_wrapper">
+                        <img class="team_modal_content_previous_teammate" src="/assets/images/arrov_left.svg" alt="">
+                        <div class="team_modal_content_current_img_wrapper">
+                            <img src="/assets/images/team_avatar.png" alt="" class="team_modal_content_current_img">
+                            <div class="team_modal_content_current_img_border"></div>
+                        </div>
+                        <img class="team_modal_content_next_teammate" src="/assets/images/arrov_left.svg" alt="">
+                    </div>
+                    <div class="team_modal_content_mobile_text_wrapper">
+                        <div class="team_modal_content_mobile_text_name font_bold font_body_l">
+                            David Tabolov
+                        </div>
+                        <div class="team_modal_content_mobile_text_info font_body_l">
+                            David has more than 8 years of Investment Banking and corporate finance experience. Focused on M&A, mezzanine financing, structured equity investments, special situations, LBO/MBO transactions.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <script src="assets/index.js"></script>
