--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="menu_logo" src="assets/images/logo.png" alt="logo">
             <div class="menu_items pc_only">
                 <a class="menu_item" scrollTo="#about_us">About us</a>
-                <a class="menu_item" scrollTo="#advisory">Advisory business</a>
+                <a class="menu_item" href="advisory.html" scrollTo="#advisory">Advisory business</a>
                 <a class="menu_item" scrollTo="#principles">Our Principles</a>
                 <a class="menu_item" scrollTo="#team">Team</a>
                 <a class="menu_item" scrollTo="#connect">Contacts</a>
@@ -544,8 +544,8 @@
 
     <div class="modal_wrapper">
         <div class="modal team_modal">
-            <div class="modal_close_wrapper">
-                <img class="modal_close_icon" src="assets/images/close.svg" alt="">
+            <div class="modal_close.svg_wrapper">
+                <img class="modal_close.svg_icon" src="assets/images/close.svg.svg" alt="">
             </div>
             <div class="team_modal_content">
                 <div class="pc_only">
