--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
     <header>
         <div class="block">
             <div class="centered">
-                <div class="title font_head_xxxl pc_only">
-                    A Fast Growing<br>Financial Advisory Firm
-                </div>
-                <div class="title font_head_xxl mobile_only">
-                    A fast growing<br>financial<br>advisory&nbsp;firm
+                <div class="title font_head_xxxl">
+                    A Fast Growing<br>Financial Advisory&nbsp;Firm
                 </div>
 
                 <a scrollTo="#connect">
